Buổi 6 : Thực hành

--- a/DataAccess.ProductNetFrameWork/DataAccess.ProductNetFrameWork.csproj
+++ b/DataAccess.ProductNetFrameWork/DataAccess.ProductNetFrameWork.csproj
@@ -44,8 +44,12 @@
   <ItemGroup>
     <Compile Include="DAOImpl\ProductDAOImpl.cs" />
     <Compile Include="DAO\IProductDAO.cs" />
+    <Compile Include="DTO\Order.cs" />
+    <Compile Include="DTO\OrderDetail.cs" />
+    <Compile Include="DTO\OrderInsertRequestData.cs" />
     <Compile Include="DTO\Product.cs" />
     <Compile Include="DTO\ReturnData.cs" />
+    <Compile Include="DTO\ShoppingCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
