--- a/WebMVC/bin/WebMVC.dll.config
+++ b/WebMVC/bin/WebMVC.dll.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="MyConnection" connectionString="Data Source=DESKTOP-IFRSV3F;Initial Catalog=BE_012014;User ID=sa;Password=123456;"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
