--- a/WebMVC/WebMVC.csproj
+++ b/WebMVC/WebMVC.csproj
@@ -2242,6 +2242,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\ListOrderPartial.cshtml" />
     <Content Include="Views\Order\OrderDetail.cshtml" />
+    <Content Include="Views\Home\GrantPermission.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
