--- a/WebMVC/WebMVC.csproj
+++ b/WebMVC/WebMVC.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\DataModel.cs" />
     <Compile Include="Models\ListCartRequestData.cs" />
     <Compile Include="Models\ReturnData.cs" />
+    <Compile Include="Models\SaveImage_DataRequestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
