--- a/WebMVC/bin/WebMVC.dll.config
+++ b/WebMVC/bin/WebMVC.dll.config
@@ -13,6 +13,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="URL_API" value="http://localhost:5025/api/" />
+    <add key="SecretKey" value="pl124bVt'PqLAy+5*1vrm'DD*q}^o$C"/>
+    <add key="API_URL" value="http://localhost:5148/api/UploadImage/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
